force-app/main/default/objects/B25__Service_Availability__c/B25__Service_Availability__c.object-meta.xml
<CustomObject>
    <description>This object makes a Service available on a Resource and all its children. Quantity is shared across all children.</description>
    <label>Service Availability</label>
    <nameField>
        <displayFormat>SA-{0000000}</displayFormat>
        <label>Service Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>