force-app/main/default/objects/B25__Service_Availability__c/fields/B25__End__c.field-meta.xml
<CustomField>
    <fullName>B25__End__c</fullName>
    <description>Until when is the Service available?</description>
    <inlineHelpText>Jusqu’à quand le service est-il disponible ?</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>