force-app/main/default/objects/B25__Service_Availability__c/fields/B25__Quantity__c.field-meta.xml
<CustomField>
    <fullName>B25__Quantity__c</fullName>
    <description>Quantity of a Service record. Leave empty if there is an unlimited quantity of a Service available.</description>
    <inlineHelpText>Laissez ce champ vide si une quantité illimitée de ce service est disponible.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>