force-app/main/default/objects/B25__Service_Availability__c/fields/B25__Resource__c.field-meta.xml
<CustomField>
    <fullName>B25__Resource__c</fullName>
    <description>Resource record to which this Service Availability record belongs.</description>
    <inlineHelpText>Ressource à laquelle appartient cette disponibilité de service.</inlineHelpText>
    <label>Resource</label>
    <referenceTo>B25__Resource__c</referenceTo>
    <relationshipLabel>Service Availabilities</relationshipLabel>
    <relationshipName>Service_Availabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>