force-app/main/default/objects/B25__Service_Availability__c/fields/B25__Service__c.field-meta.xml
<CustomField>
    <fullName>B25__Service__c</fullName>
    <description>Service record to which the Service Availability record belongs.</description>
    <inlineHelpText>Service auquel appartient cette disponibilité de service.</inlineHelpText>
    <label>Service</label>
    <referenceTo>B25__Service__c</referenceTo>
    <relationshipLabel>Service Availabilities</relationshipLabel>
    <relationshipName>Service_Availabilities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>