force-app/main/default/objects/B25__Service_Availability__c/fields/B25__Start__c.field-meta.xml
<CustomField>
    <fullName>B25__Start__c</fullName>
    <description>From when is the Service available?</description>
    <inlineHelpText>À partir de quand le service est-il disponible ?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>