force-app/main/default/objects/B25__Service_Availability__c/listViews/B25__All.listView-meta.xml
<ListView>
    <fullName>B25__All</fullName>
    <columns>NAME</columns>
    <columns>B25__Service__c</columns>
    <columns>B25__Resource__c</columns>
    <columns>B25__Quantity__c</columns>
    <columns>B25__Start__c</columns>
    <columns>B25__End__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>